--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hipo.lookie.TabbedActivity">
+    tools:context="com.hipo.lookie.com.hipo.activity.TabbedActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
