--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hipo.lookie.MapFragment">
+    tools:context="com.hipo.lookie.com.hipo.fragment.MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
