--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hipo.lookie.SettingFragment">
+    tools:context="com.hipo.lookie.com.hipo.fragment.SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.facebook.login.widget.LoginButton
