--- a/app/src/main/res/layout/fragment_my_dialog.xml
+++ b/app/src/main/res/layout/fragment_my_dialog.xml
@@ -185,7 +185,7 @@
                     android:id="@+id/category_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:entries="@array/category_list"
+                    android:entries="@array/category_spinner"
                     android:visibility="invisible" />
 
             </FrameLayout>
