--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -10,8 +10,28 @@
         <item>카드</item>
         <item>기타</item>
     </string-array>
-    <string-array name="category_list">
+    <string-array name="category_spinner">
         <item>생활비</item>
         <item>기타</item>
     </string-array>
+    <string-array name="list_month">
+        <item>1월</item>
+        <item>2월</item>
+        <item>3월</item>
+        <item>4월</item>
+        <item>5월</item>
+        <item>6월</item>
+        <item>7월</item>
+        <item>8월</item>
+        <item>9월</item>
+        <item>10월</item>
+        <item>11월</item>
+        <item>12월</item>
+    </string-array>
+
+    <string-array name="list_year">
+        <item>2016년</item>
+        <item>2017년</item>
+    </string-array>
+
 </resources>
