--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="list_spinner">
-        <item>최신순</item>
+        <item>입력순</item>
         <item>높은금액순</item>
         <item>낮은금액순</item>
     </string-array>
