--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hipo.lookie.com.hipo.activity.TabbedActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.hipo.lookie.com.hipo.activity.TabbedActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -23,6 +23,32 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="80"
+                    android:gravity="left"
+                    android:paddingTop="8dp"
+                    android:text="@string/appName"
+                    android:textColor="#FFFFFF"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/add_icon"
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="20"
+                    android:background="@mipmap/hipologo"
+                    android:scaleType="fitXY" />
+
+            </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
 
