--- a/app/src/main/res/layout/fragment_my_dialog.xml
+++ b/app/src/main/res/layout/fragment_my_dialog.xml
@@ -56,13 +56,31 @@
                     android:textColor="#000000"
                     android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/money_edit"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:visibility="invisible" />
+                    android:orientation="horizontal"
+                    android:weightSum="100">
+
+                    <EditText
+                        android:id="@+id/money_edit"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="75"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:visibility="invisible" />
+
+                    <TextView
+                        android:id="@+id/won_text"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:text="원"
+                        android:textSize="20sp"
+                        android:visibility="invisible" />
+
+                </LinearLayout>
             </FrameLayout>
 
         </LinearLayout>
