--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,11 +5,36 @@
     tools:context="com.hipo.lookie.com.hipo.fragment.MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="map" />
+        android:orientation="vertical"
+        android:weightSum="100">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="10"
+            android:orientation="horizontal"
+            android:weightSum="100">
+
+            <Button
+                android:id="@+id/myLocBtn"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="20"
+                android:layout_margin="3sp" />
+
+        </LinearLayout>
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_weight="90"
+            android:layout_width="match_parent"
+            android:layout_height="0dip" />
+
+    </LinearLayout>
 
 </FrameLayout>
