--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -33,18 +33,18 @@
                 <TextView
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
+                    android:layout_margin="8dp"
                     android:layout_weight="90"
                     android:gravity="left"
-                    android:paddingTop="8dp"
                     android:text="@string/appName"
                     android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
+                    android:textSize="25sp" />
 
                 <ImageView
                     android:id="@+id/add_icon"
                     android:layout_width="0dip"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
                     android:layout_weight="10"
                     android:background="@mipmap/add"
                     android:scaleType="fitXY" />
