--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -4,10 +4,39 @@
     android:layout_height="match_parent"
     tools:context="com.hipo.lookie.com.hipo.fragment.ChartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:weightSum="100">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="10"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/chart_year_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></Spinner>
+
+            <Spinner
+                android:id="@+id/chart_month_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></Spinner>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/payed_money_text"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="20" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
