--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -62,7 +62,9 @@
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="70dip"
+                    android:ellipsize="end"
                     android:gravity="bottom"
+                    android:singleLine="true"
                     android:textColor="#200000"
                     android:textSize="25sp" />
 
