--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#25CFBE</color>
-    <color name="colorPrimaryDark">#25CFBE</color>
+    <color name="colorPrimaryDark">#1b9488</color>
     <color name="colorAccent">#D1E4E6</color>
     <color name="colorDeepRed">#CC0303</color>
     <color name="colorSelected">#25CFBE</color>
