--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -34,17 +34,27 @@
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
-                    android:layout_weight="90"
+                    android:layout_weight="70"
                     android:gravity="left"
                     android:text="@string/appName"
                     android:textColor="#FFFFFF"
                     android:textSize="25sp" />
 
                 <ImageView
+                    android:id="@+id/check_icon"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="15"
+                    android:layout_marginRight="15dp"
+                    android:background="@mipmap/checkmoney"
+                    android:scaleType="fitXY" />
+
+                <ImageView
                     android:id="@+id/add_icon"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="10"
                     android:background="@mipmap/add"
                     android:scaleType="fitXY" />
