--- a/app/src/main/res/layout/check_money_dialog_fragment.xml
+++ b/app/src/main/res/layout/check_money_dialog_fragment.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/check_popup_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
