--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -20,28 +20,38 @@
                 android:id="@+id/chart_year_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"></Spinner>
+                android:layout_weight="1"
+                android:entries="@array/year_spinner"></Spinner>
 
             <Spinner
                 android:id="@+id/chart_month_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"></Spinner>
+                android:layout_weight="1"
+                android:entries="@array/month_spinner"></Spinner>
 
             <Spinner
                 android:id="@+id/chart_assortment_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"></Spinner>
+                android:layout_weight="1"
+                android:entries="@array/assortment_spinner"></Spinner>
 
         </LinearLayout>
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pie_chart"
+        <FrameLayout
+            android:id="@+id/pie_chart_layout"
             android:layout_width="match_parent"
-            android:layout_margin="10sp"
             android:layout_height="0dip"
-            android:layout_weight="90" />
+            android:layout_weight="90">
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/pie_chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10sp" />
+        </FrameLayout>
+
     </LinearLayout>
 
 </FrameLayout>
