--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -14,27 +14,48 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="10"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1000">
 
             <Spinner
                 android:id="@+id/chart_year_spinner"
-                android:layout_width="match_parent"
+                android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="300"
                 android:entries="@array/year_spinner"></Spinner>
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="50"
+                android:gravity="center"
+                android:text="년"
+                android:textColor="#000000"
+                android:textSize="15sp" />
 
             <Spinner
                 android:id="@+id/chart_month_spinner"
-                android:layout_width="match_parent"
+                android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="300"
                 android:entries="@array/month_spinner"></Spinner>
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="50"
+                android:gravity="center"
+                android:text="월"
+                android:textColor="#000000"
+                android:textSize="15sp" />
 
             <Spinner
                 android:id="@+id/chart_assortment_spinner"
-                android:layout_width="match_parent"
+                android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="300"
                 android:entries="@array/assortment_spinner"></Spinner>
 
         </LinearLayout>
