--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -71,6 +71,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10sp" />
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/Consumption_bar_chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10sp"></com.github.mikephil.charting.charts.BarChart>
+
         </FrameLayout>
 
     </LinearLayout>
