--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1000">
 
     <LinearLayout
         android:id="@+id/list_item"
         android:layout_width="match_parent"
-        android:layout_height="100dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="100"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:orientation="horizontal">
@@ -54,7 +56,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="180dip"
+                android:layout_width="160dip"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
