--- a/app/src/main/res/layout/fragment_my_dialog.xml
+++ b/app/src/main/res/layout/fragment_my_dialog.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="1000">
 
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_marginBottom="15sp"
-            android:layout_weight="80"
+            android:layout_weight="200"
             android:gravity="right"
             android:orientation="horizontal"
             android:weightSum="1000">
@@ -23,7 +23,7 @@
             <ImageView
                 android:id="@+id/delete_btn"
                 android:layout_width="0dip"
-                android:layout_height="wrap_content"
+                android:layout_height="40sp"
                 android:layout_weight="150"
                 android:background="@mipmap/basket"
                 android:scaleType="fitXY" />
@@ -31,7 +31,7 @@
             <ImageView
                 android:id="@+id/modify_btn"
                 android:layout_width="0dip"
-                android:layout_height="wrap_content"
+                android:layout_height="40sp"
                 android:layout_weight="150"
                 android:background="@mipmap/modify"
                 android:scaleType="fitXY"
@@ -51,7 +51,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="300"
                 android:gravity="center"
-                android:text="money"
+                android:text="@string/money"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
@@ -78,7 +78,7 @@
                     <EditText
                         android:id="@+id/money_edit"
                         android:layout_width="0dip"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="75"
                         android:gravity="center"
                         android:textSize="20sp"
@@ -111,7 +111,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="300"
                 android:gravity="center"
-                android:text="paid"
+                android:text="@string/paid"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
@@ -132,7 +132,7 @@
                 <Spinner
                     android:id="@+id/money_spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:entries="@array/paid_spinner"
                     android:visibility="invisible"></Spinner>
             </FrameLayout>
@@ -152,7 +152,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="300"
                 android:gravity="center"
-                android:text="name"
+                android:text="@string/name"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
@@ -173,7 +173,7 @@
                 <EditText
                     android:id="@+id/name_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="20sp"
                     android:visibility="invisible" />
@@ -194,7 +194,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="300"
                 android:gravity="center"
-                android:text="category"
+                android:text="@string/category"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
@@ -215,7 +215,7 @@
                 <Spinner
                     android:id="@+id/category_spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:entries="@array/category_spinner"
                     android:visibility="invisible" />
 
@@ -236,7 +236,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="300"
                 android:gravity="center"
-                android:text="date"
+                android:text="@string/date"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
