--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -60,7 +60,9 @@
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_margin="3sp"
-                android:layout_weight="20" />
+                android:layout_weight="20"
+                android:text="@string/myloc"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
